@startuml

title __EXCHANGE FRAGMENT's Class Diagram__\n

package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.adapter {
    class TabsAdapter {
      - mFragmentList : List<Fragment>
      - mFragmentTitleList : List<String>
      + TabsAdapter()
      + addFragment()
      + getPageTitle()
      + getItem()
      + getCount()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.adapter {
    class BookDataAdapter {
      - myBorrowedBookList : List<BookListItem>
      - myOwnedBookList : List<BookListItem>
      {static} - instance : BookDataAdapter
      {static} + getInstance()
      - BookDataAdapter()
      + getMyBorrowedBooksList()
      + getMyOwnedBooksList()
      - fetchMyBorrowedBooksList()
      - fetchMyOwnedBooksList()
      - userBooksToBookList()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.adapter {
    class BookRecyclerViewAdapter {
      - mContext : Context
      - mBookListItem : List<BookListItem>
      - destination : String
      + BookRecyclerViewAdapter()
      + onCreateViewHolder()
      + onBindViewHolder()
      + getItemCount()
      - dataBundler()
      + setmBookListItem()
      - setDestination()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.activity {
    class MainActivity {
      - fetching : boolean
      - bookDataObserver : Observer
      - bookDataAdapter : BookDataAdapter
      # onCreate()
      # onDestroy()
      # onStart()
      - loadFragment()
      + onNavigationItemSelected()
      # onResume()
      + onProfileButtonClick()
      + isFetching()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
    package ca.ualberta.CMPUT3012019T02.alexandria.fragment.exchange {
      class AcceptedFragment {
        - bookListings : List<BookListItem>
        - mainActivity : MainActivity
        - bookAdapter : BookRecyclerViewAdapter
        - view : View
        + onCreateView()
        + onViewCreated()
        + onAttach()
        + onResume()
        + update()
      }
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
    package ca.ualberta.CMPUT3012019T02.alexandria.fragment.exchange {
      class BorrowedFragment {
        - bookListings : List<BookListItem>
        - mainActivity : MainActivity
        - bookAdapter : BookRecyclerViewAdapter
        - view : View
        + onCreateView()
        + onViewCreated()
        + onAttach()
        + onResume()
        + update()
      }
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
    package ca.ualberta.CMPUT3012019T02.alexandria.fragment.exchange {
      class ExchangeFragment {
        + onCreateView()
        - setupViewPager()
        + onClick()
        + onResume()
      }
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
    package ca.ualberta.CMPUT3012019T02.alexandria.fragment.exchange {
      class RequestedFragment {
        - bookListings : List<BookListItem>
        - mainActivity : MainActivity
        - bookAdapter : BookRecyclerViewAdapter
        - view : View
        + onCreateView()
        + onViewCreated()
        + onAttach()
        + onResume()
        + update()
      }
    }
  }
}

note bottom of BookDataAdapter
  Observer Pattern
end note

AcceptedFragment -up-|> Observer
AcceptedFragment -up-|> Fragment
AcceptedFragment o-- "1" BookRecyclerViewAdapter
AcceptedFragment o-- "1" MainActivity
BorrowedFragment -up-|> Observer
BorrowedFragment -up-|> Fragment
BorrowedFragment o-- "1" BookRecyclerViewAdapter
BorrowedFragment o-- "1" MainActivity
ExchangeFragment -up-|> OnClickListener
ExchangeFragment -up-|> Fragment
ExchangeFragment "1" -- "1" AcceptedFragment : creates >
ExchangeFragment "1" -- "1" BorrowedFragment : creates >
ExchangeFragment "1" -- "1" RequestedFragment : creates >
ExchangeFragment "1" -- "1" TabsAdapter : creates >
RequestedFragment -up-|> Observer
RequestedFragment -up-|> Fragment
RequestedFragment o-- "1" BookRecyclerViewAdapter
RequestedFragment o-- "1" MainActivity
BookDataAdapter o-up- "1" AcceptedFragment
BookDataAdapter o-up- "1" BorrowedFragment
BookDataAdapter o-up- "1" RequestedFragment
BookDataAdapter -up-|> Observable

right footer


  PlantUML diagram partly generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
  For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
